syntax = "proto3";
package modules;

option go_package = "github.com/autonomouskoi/akcore/modules";

message Config {
    bool  automatic_start = 1;
}